--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fast-fluids"
-version = "0.1.3"
+version = "0.2.0"
 description = "Experimental code for modelling fluids in a performant manner."
 authors = ["Lawrence Pryn <lawrencempryn@gmail.com>"]
 license = "MIT"
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 numpy = "^1.26.2"
+pydantic = "^2.5.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
@@ -26,10 +27,12 @@ files = "**/*.py"
 strict = true
 
 [tool.black]
+line-length = 100
 include = ".+\\.py"
 
 [tool.ruff]
 line-length = 100
+target-version = "py312"
 
 [tool.ruff.lint]
 select = ["ALL"]
@@ -39,6 +42,8 @@ ignore = [
     "D203",
     "D213",
     "D104",
+    "D107",
+    "ANN101",
 ]
 
 [tool.ruff.per-file-ignores]
@@ -48,6 +53,7 @@ ignore = [
     "INP001",
     "F401",
     "D103",
+    "S101",
 ]
 
 [tool.ruff.lint.pydocstyle]
